Align Resolve Conflicts button

--- a/source/content.css
+++ b/source/content.css
@@ -116,6 +116,9 @@
 .mergeability-details .branch-action-item-icon {
 	margin-top: -4px;
 }
+.mergeability-details .branch-action-item .float-right.btn {
+	margin-top: -6px;
+}
 .alt-merge-options {
 	display: none !important;
 }
